# limbo_recorder

./: .gitignore  CMakeLists.txt  Makefile  README.md  init.sh
include/: databuf.h  obs_data.h  obs_redis.h
scripts/: disable_record.sh  disable_vol_record.sh  enable_record.sh  enable_vol_record.sh  mount_ramdish.sh  restart_recorder.sh  stop_recorder.sh  umount_ramdisk.sh
src/: databuf.c  net_thread.c  obs_data.c  obs_redis.c  output_thread.c
